--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 <footer id="footer" class="bg-light text-center">
-    <div id="footercontent" class="text-center p-3" style="background-color: #851313; font-weight: bolder; color: white;">
+    <div id="footercontent" class="text-center p-3" style="background-color: rgb(93, 7, 93); font-weight: bolder; color: white;">
       © 2021 Copyright:
       <b style="color: white; font-weight: bolder;" class="text-light">Gowthamraj K</b>
       <br><br>
