--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -28,3 +28,94 @@
     padding: 5px 10px 5px 10px;
     border-radius: 15px;
   }
+
+
+  .content{
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    z-index: 1000; 
+  }
+  .header
+  {
+    background-color: rgb(93, 7, 93);
+    position: relative;
+    width: 100%;
+    padding: 0 80px;
+    box-shadow: 5px 10px 18px #888888;
+  }
+  .nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+  }
+  #logo{
+    width: 100px;
+    height: 40px;
+  }
+
+  #log{
+    color: #fff;
+    background: none;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 10px 20px;
+    font-size: 15px;
+    outline: none;
+    transition: all 0.5s ease;
+      transform: scale(1);
+  }
+  #log:hover
+  {
+    padding: 6px 15px;
+    background: rgb(119, 7, 119);
+    color: #fff;
+      border: none;
+      border-radius: 15px;
+      margin-left: 15px;
+      cursor: pointer;
+      outline: none;
+  }
+  
+  #log:active
+  {
+    transform: translate(10px, 10px);
+      -webkit-transform: translate(10px, 10px);
+      box-shadow: 0px 1px 0px 0px;
+  }
+
+  #log-current{
+    font-size: 15px;
+    transition: all 0.5s ease;
+      transform: scale(1);
+      background: rgb(119, 7, 119);
+      padding: 6px 15px;
+      color: #fff;
+        border: none;
+        border-radius: 15px;
+        margin-left: 15px;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px #888888;;
+    z-index: 1;
+  }
+
+  
+  .dropdown:hover .dropdown-content {display: block;}
