--- a/src/app/components/welcomepage/welcomepage.component.css
+++ b/src/app/components/welcomepage/welcomepage.component.css
@@ -3,33 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Aladin&family=Merienda+One&family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Stick&display=swap');
 
-.content{
-	width: 100%;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-.header
-{
-	background-color: #851313;
-	position: relative;
-	height: 500px;
-	width: 100%;
-	padding: 0 80px;
-	box-shadow: 5px 10px 18px #888888;
-	border-radius: 1px 1px 20% 20%;
-}
-.nav{
+/* .nav{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin-top: 15px;
 }
-#logo{
-	width: 100px;
-	height: 40px;
-}
+
 #img3{
 	width: 540px;
 	height: 380px;
@@ -98,23 +78,6 @@ li:hover{
 	margin-top: 20px;
 	padding: 0 90px;
 }
-.main img
-{
-	animation-name: floating; 
-    animation-duration: 3s; 
-    animation-iteration-count: infinite; 
-    animation-timing-function: ease-in-out; 
-    margin-left: 30px; 
-    margin-top: 3px; 
-	height: 400px;
-	width: 540px;
-}
-@keyframes floating 
-{ 
-    0% { transform: translate(0,  0px); } 
-    50%  { transform: translate(0, 15px); } 
-    100%   { transform: translate(0, -0px); }     
-} 
 .text h1
 {
 	color: #fff;
@@ -152,66 +115,6 @@ background: linear-gradient(to top, #ff9933 0%, #ff6600 100%);
  cursor: pointer;
 }
 
-#create_acc{
-	padding: 10px 20px;
-	background: #fff;
-	color: #000;
-    border: none;
-    border-radius: 10px;
-    margin-left: 15px;
-    cursor: pointer;
-    outline: none;
-    transition: all 1s ease;
-    transform: scale(1);
-}
-#create_acc:hover
-{
-	padding: 6px 15px;
-	background: linear-gradient(to bottom, #ff9933 0%, #ff6600 100%);
-	color: #fff;
-    border: none;
-    border-radius: 15px;
-    margin-left: 15px;
-    cursor: pointer;
-    outline: none;
-    transform: scale(1.0) perspective(5px);
-}
-#create_acc:active
-{
-	transform: translate(10px, 10px);
-    -webkit-transform: translate(10px, 10px);
-    box-shadow: 0px 1px 0px 0px;
-}
-#log{
-	color: #fff;
-	background: none;
-	border: none;
-	border-radius: 10px;
-	cursor: pointer;
-	padding: 10px 20px;
-	font-size: 15px;
-	outline: none;
-	transition: all 1s ease;
-    transform: scale(1);
-}
-#log:hover
-{
-	padding: 6px 15px;
-	background: linear-gradient(to bottom, #ff9933 0%, #ff6600 100%);
-	color: #fff;
-    border: none;
-    border-radius: 15px;
-    margin-left: 15px;
-    cursor: pointer;
-    outline: none;
-    transform: scale(1.0) perspective(5px);
-}
-#log:active
-{
-	transform: translate(10px, 10px);
-    -webkit-transform: translate(10px, 10px);
-    box-shadow: 0px 1px 0px 0px;
-}
 .body{
 	display: flex;
 	justify-content: center;
@@ -321,6 +224,7 @@ background: linear-gradient(to top, #ff9933 0%, #ff6600 100%);
 	border-radius: 15px;
 	background-color: #edf0eb;
 }
+
 .subtext1{
 	padding: 10px;
 	color: #123d3a;
@@ -478,4 +382,41 @@ background-color: rgb(6, 54, 50);
 	margin-right: 3%;
 	margin-bottom: 3%;
 	border-radius: 15px;
+} */
+
+.main-content{
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 10%;
+	margin-bottom: 10%;
 }
+
+.about-section{
+	text-align: justify;
+	padding: 10px;
+	display: inline-block;
+	align-items: center;
+	transition: transform .4s;
+	background-color: white;
+	padding: 10px 20px 5px 20px;
+	border-radius: 10px;
+	box-shadow: 0.1px 4px 8px 2px rgba(0,0,0,0.2);
+	flex-basis: 48%; /* Set a percentage width for the flex items */
+    margin-bottom: 20px; /* Add some spacing between the items */
+	margin-top: 20px; /* Add some spacing between the items */
+}
+
+.container {
+	display: flex;
+	justify-content: space-between; /* This aligns the divs to the left and right edges */
+	display: flex;
+  	justify-content: space-between;
+  	flex-wrap: wrap; 
+  }
+
+  /* Media query for smaller screens */
+@media screen and (max-width: 768px) {
+	.about-section {
+	  flex-basis: 100%; /* Full width for individual items on smaller screens */
+	}
+  }
