--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,18 +1,4 @@
-.sidebar-text
-  {
-      font-size: medium;
-  }
-  .content-container {
-    padding-top: 20px;
-  }
-  
-  .sidebar-logo {
-    padding: 15px 15px 15px 30px;
-    font-size: 20px;
-    text-align: right;
-    background-color: #851313;
-    width: 100%;
-  }
+
   .logoutbtn{
     border: none;
     background:transparent;
@@ -35,7 +21,6 @@
     left: 0;
     right: 0;
     width: 100%;
-    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,13 +37,8 @@
   }
   .nav{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15px;
-  }
-  #logo{
-    width: 100px;
-    height: 40px;
+     justify-content: space-between;
+     margin-top: 15px;
   }
 
   #log{
@@ -105,17 +85,42 @@
   }
 
   .dropdown {
-    position: relative;
     display: inline-block;
   }
   
   .dropdown-content {
     display: none;
-    position: absolute;
+     position: absolute;
     background-color: #f1f1f1;
+    border-radius: 10px;
     box-shadow: 0px 8px 16px 0px #888888;;
     z-index: 1;
   }
 
   
   .dropdown:hover .dropdown-content {display: block;}
+
+  .detail {
+    height: 100px;
+    width: 100px;
+    display: flex;
+    margin: 15px;
+    flex-direction: column;
+    align-items: center;
+    transition: transform .4s;
+    background-color: white;
+    padding: 10px 20px 5px 20px;
+    border-radius: 10px;
+    box-shadow: 0.1px 4px 8px 2px rgba(0,0,0,0.2);
+  }
+  .detail:hover {
+  transform: scale(1.05); 
+  cursor: pointer;
+  background-color: rgb(6, 54, 50);
+  }
+
+  .logo {
+    display: flex;
+    position: relative;
+    width: 700px;
+  }
