--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -19,10 +19,10 @@ input{
 }
 .textual
 {
-    color: rgb(64, 85, 15); 
+    color:  black;
     text-align: center; 
     margin-top: -20px;
-    font-family: 'Aladin', cursive;
+    font-family: 'Verdana', sans-serif;
     padding: 5px;
     text-transform: uppercase;
 }
