--- a/src/app/components/registration/registration.component.css
+++ b/src/app/components/registration/registration.component.css
@@ -2,8 +2,8 @@
 
 .register{
     background: white;
-    margin-top: 0.8%;
-    margin-bottom: 3%;
+    margin-top: 10%;
+    margin-bottom: 10%;
     border-radius: 15px;
     padding: 3%;
 }
@@ -53,14 +53,14 @@
     color: #0a3d3b;
 }
 .btnRegister:hover{
-    background: #440707;
+    background: rgb(93, 7, 93);
     color: #fff;
     cursor: pointer;
 }
 .register .nav-tabs{
     margin-top: 3%;
     border: none;
-    background: #971515;
+    background: rgb(93, 7, 93);
     border-radius: 1.5rem;
     width: 28%;
     float: right;
@@ -86,7 +86,7 @@
 .highlight1, .highlight2{
     width: 100px;
     color: #fdfdfd;
-    background-color: #f14747;
+    background-color: rgb(150, 7, 150);
     border: 2px solid #440707;
     border-top-left-radius: 1.5rem;
     border-bottom-left-radius: 1.5rem;
