--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -9,10 +9,10 @@
         <div class="col-md-9 register-right">
             <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link nav1" id="home-tab" data-toggle="tab" data-target="#home" role="tab" aria-controls="home" aria-selected="true">User</a>
+                    <a class="nav-link nav1" id="home-tab" (click)="changeForm('user')"  data-toggle="tab" data-target="#home" role="tab" aria-controls="home" aria-selected="true">User</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav2" id="profile-tab" data-toggle="tab" role="tab" aria-controls="profile" aria-selected="false">Professor</a>
+                    <a class="nav-link nav2" id="profile-tab" (click)="changeForm('professor')"  data-toggle="tab" role="tab" aria-controls="profile" aria-selected="false">Professor</a>
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
