--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -44,7 +44,7 @@ input{
 }
 .loginbtn:hover
 {
-    background-color: rgb(23, 78, 78);
+    background-color: #440707;
     padding-left: 7%;
     padding-right: 7%;
     cursor: pointer;
