--- a/src/app/components/userprofile/userprofile.component.html
+++ b/src/app/components/userprofile/userprofile.component.html
@@ -1,4 +1,3 @@
-<app-header></app-header>
 
 <div class="row" id="profilecard">
     <div *ngFor="let user of profileDetails | async" id="bloodCards">
@@ -22,9 +21,8 @@
         <div class="col-md-9 register-right">
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                    <h3 class="textual">Update User Profile</h3>
-                    <small *ngIf="temp === false" style="font-weight: bold; margin-left: 25%; text-align: center; color: darkgreen;"><b>Dear {{loggedUser}}, update your profile here</b></small>
-                    <small *ngIf="temp === true" style="text-align: center; color: green;"><b>Profile Updated Successfully !!!</b></small>  
+                    <h3 class="textual">Update Yournpm Profile</h3>
+                    <small *ngIf="temp === true" style="text-align: center; color: green;"><b>Profile Updated Successfully!</b></small>  
                     <form #Updateform="ngForm" style="margin-top: -15%;" (ngSubmit)="updateUserProfile()">
                         <div class="row register-form">
                             <div class="col-md-6">
@@ -93,5 +91,3 @@
         </div>
     </div>
 </div>
-
-<app-footer></app-footer>
