--- a/src/app/components/courselist/courselist.component.html
+++ b/src/app/components/courselist/courselist.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
 
-<div id="youtubecoursecard" style="margin-left: 10%; margin-right: 10%; margin-top: 5%;">
+<div id="youtubecoursecard" style="margin-left: 10%; margin-right: 10%; margin-top: 10%; margin-bottom: 10%;">
   <div class="headtext">Courses with Youtube Videos</div>
 <owl-carousel-o  [options]="owlOptions" (dragging)="owlDragging($event)">
   <ng-container>
@@ -140,4 +139,3 @@
 </div>
 
 <br>
-<app-footer></app-footer>
