--- a/src/app/components/mycourses/mycourses.component.html
+++ b/src/app/components/mycourses/mycourses.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
 
-<div class="heading-text" style="color: darkgreen;"><b><i class="fa fa-graduation-cap"></i> My Learning</b></div>
+<div class="heading-text" style="color: #440707; margin-top: 10%; margin-bottom: 10%;"><b><i class="fa fa-graduation-cap"></i> My Learning</b></div>
 <div id="youtubecoursecard" style="margin-left: 10%; margin-right: 10%; margin-top: 2%;">
   <owl-carousel-o  [options]="owlOptions" (dragging)="owlDragging($event)">
     <ng-container>
@@ -29,4 +28,3 @@
   </div>
 
 <br><br>
-<app-footer></app-footer>
