--- a/src/app/components/userlist/userlist.component.css
+++ b/src/app/components/userlist/userlist.component.css
@@ -28,7 +28,6 @@
 }
 .text{
   font-family: serif;
-  font-size: larger;
   font-weight: bolder;
 }
 #searchtxt
@@ -38,7 +37,7 @@
 }
 .img-block{
     width: 40%;
-    height: 180px;
+    height: 200px;
     border-radius: 15px;
     background-color: white;
 }
@@ -47,11 +46,11 @@
     margin-left: auto;
     margin-right: auto;
     align-content: center;
-    margin-top: 20%;
+    margin-top: auto;
     margin-bottom: auto;
     border-radius: 50%;
-    width: 73%;
-    height: 80%;
+    width: 50%;
+    height: 50%;
 }
 .bloodimg
 {
@@ -63,7 +62,7 @@
     font-weight: bolder;
     font-size: 40px;
     margin-top: 1%;
-    color: darkgreen;
+    color: #440707;
     font-family: 'Aladin', cursive;
     letter-spacing: 1px;
     margin-left: 45%;
