--- a/src/app/components/userlist/userlist.component.html
+++ b/src/app/components/userlist/userlist.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
-<div class="heading-text"><b>User List</b></div>
+<div class="heading-text" style="margin-top: 10%; margin-bottom: 10%;"><b>User List</b></div>
 <div class="row">
-    <div  *ngFor="let user of users | async" class="col-4 card" id="bloodCards">
+    <div  *ngFor="let user of users | async" class="col-4 card" style="height: 200px;" id="bloodCards">
         <div class="img-block">
             <div class="circle">
                 <img *ngIf="user.gender === 'Male' || user.gender === 'male'"  class="bloodimg" [src]="'assets/img/maleuser.png'" width="100" height="100">
@@ -10,15 +10,13 @@
             </div>
         </div>
         <div class="card-block">
-            <div class="text"><b style="color: maroon;"> {{user.username}} </b></div>
-            <div class="text"><b style="color: darkblue;"> {{user.userid}} </b></div>
-            <div class="text"><b style="color: maroon;"> {{user.email}} </b></div>
-            <div class="text"><b style="color: maroon;"> {{user.profession}} </b></div>
-            <div class="text"><b style="color: maroon;"> {{user.gender}} </b></div>
-            <div class="text"><b style="color: maroon;"> {{user.mobile}} </b></div>
+            <div class="text"><b> Username: {{user.username}} </b></div>
+            <div class="text"><b>Id: </b><b style="color: darkblue;"> {{user.userid}} </b></div>
+            <div class="text"><b> Email: {{user.email}} </b></div>
+            <div class="text"><b> University: {{user.profession}} </b></div>
+            <div class="text"><b> Phone number: {{user.mobile}} </b></div>
         </div>
     </div>
   </div>
 
 <br><br><br>
-<app-footer></app-footer>
