--- a/src/app/components/userprofile/userprofile.component.html
+++ b/src/app/components/userprofile/userprofile.component.html
@@ -7,11 +7,10 @@
             <div class="text"><b class="element" style="margin-left: 6%;"> {{user.username}}</b> </div>
             <div class="text"><small style="font-size: smaller; margin-left: 6%; padding: 3px 8px 3px 8px; background-color: rgb(87, 64, 8); border-radius: 10px; font-weight: bold; width: 55%; color: white;">{{user.userid}}</small> </div>
             <div class="text"><b class="element" style="margin-left: 6%;"> {{user.mobile}}</b> </div>
-            <div class="text"><b class="element" style="margin-left: 6%;"> {{user.gender}}</b> </div>
             <div class="text"><b class="element" style="margin-left: 6%;"> {{user.profession}}</b> </div>
             <div class="text"><b class="element" style="margin-left: 6%;"> {{user.email}}</b> </div>
             <div class="btndiv" style="align-items: center;"><button class="editbtn" (click)="editProfile()"><i class="fa fa-edit"></i> edit</button></div>
-            <small id="message" *ngIf="temp === true" style="text-align: center; margin-top: 3%; color: green;"><b>Profile Updated Successfully !!!</b></small> 
+            <small id="message" *ngIf="temp === true" style="text-align: center; margin-top: 3%; color: green;"><b>Profile Updated Successfully!</b></small> 
           </div>
     </div>
 </div>
@@ -21,9 +20,9 @@
         <div class="col-md-9 register-right">
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                    <h3 class="textual">Update Yournpm Profile</h3>
+                    <h3 class="textual">Update Profile</h3>
                     <small *ngIf="temp === true" style="text-align: center; color: green;"><b>Profile Updated Successfully!</b></small>  
-                    <form #Updateform="ngForm" style="margin-top: -15%;" (ngSubmit)="updateUserProfile()">
+                    <!-- <form #Updateform="ngForm" style="margin-top: -15%;" (ngSubmit)="updateUserProfile()">
                         <div class="row register-form">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -85,6 +84,105 @@
                             </div>
                         </div>
                         <button [disabled]="Updateform.form.invalid" type="submit" class="btn registerbtn">Update</button>
+                </form> -->
+
+                <form #Updateform="ngForm" style="margin-top: -15%;" (ngSubmit)="updateUserProfile()">
+                    <div class="row register-form">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Username *" name="username" [(ngModel)]="user.username" required 
+                                #username="ngModel"
+                                [class.is-invalid]="username.invalid && username.touched">
+                                <small class="text-danger" [class.d-none]="username.valid || username.untouched"><b>required field</b></small>
+                            </div>
+                            <div class="form-group">
+                                <select class="form-control" id="useruniversity" name="useruniversity"  [(ngModel)]="user.profession" required
+                                #useruniversity="ngModel"
+                                [class.is-invalid]="useruniversity.invalid && useruniversity.touched">
+                                <option disabled selected value="">University *</option>
+                                <option value="Harvard University">Harvard University</option>
+                                <option value="Stanford University">Stanford University</option>
+                                <option value="University of Oxford">University of Oxford</option>
+                                <option value="University of Cambridge">University of Cambridge</option>
+                                <option value="Massachusetts Institute of Technology">Massachusetts Institute of Technology</option>
+                                <option value="California Institute of Technology">California Institute of Technology</option>
+                                <option value="Imperial College London">Imperial College London</option>
+                                <option value="ETH Zurich - Swiss Federal Institute of Technology">ETH Zurich - Swiss Federal Institute of Technology</option>
+                                <option value="National University of Singapore">National University of Singapore</option>
+                                <option value="University of Tokyo">University of Tokyo</option>
+                                <option value="University of Toronto">University of Toronto</option>
+                                <option value="University of Melbourne">University of Melbourne</option>
+                                <option value="Other">Other</option>
+                                </select>
+                                <small class="text-danger" [class.d-none]="useruniversity.valid || useruniversity.untouched"><b>required field</b></small>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" placeholder="Password *" name="pwd" [(ngModel)]="user.password" required 
+                                #userpassword="ngModel"
+                                [class.is-invalid]="userpassword.invalid && userpassword.touched">
+                                <div *ngIf="userpassword.errors && userpassword.invalid && userpassword.touched">
+                                  <small class="text-danger" *ngIf="userpassword.errors.required"><b>required field</b></small>
+                                </div>
+                                <small class="text-danger" *ngIf="wrongPassword(userpassword.value)">At least one uppercase, numeric digit, lowercase, special character, length of 6-20</small>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control"  placeholder="Confirm Password *" name="ConfirmPassword" (ngModel)="user.password" required 
+                                #userconfirmPassword="ngModel"
+                                [class.is-invalid]="userconfirmPassword.invalid && userconfirmPassword.touched">
+                                <div *ngIf="userconfirmPassword.errors && userconfirmPassword.invalid && userconfirmPassword.touched">
+                                    <small class="text-danger" *ngIf="userconfirmPassword.errors.required"><b>required field</b></small>
+                                </div>
+                                <div *ngIf="userconfirmPassword.value !== userpassword.value && userconfirmPassword.touched">
+                                    <small class="text-danger"><b>passwords don't match</b></small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email address *" name="useremail" [(ngModel)]="user.email" required pattern="^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$"
+                                #useremail="ngModel"
+                                [class.is-invalid]="useremail.invalid && useremail.touched">
+                                <div *ngIf="useremail.errors && (useremail.invalid && useremail.touched)">
+                                    <small class="text-danger" *ngIf="useremail.errors.required"><b>required field</b></small>
+                                    <small class="text-danger" *ngIf="useremail.errors.pattern"><b>Invalid email Id</b></small>
+                                  </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="tel" maxlength="10" minlength="10" class="form-control" placeholder="Mobile *" id ="usermobile" name="usermobile" [(ngModel)]="user.mobile" required 
+                                #usermobile="ngModel"
+                                [class.is-invalid]="usermobile.invalid && usermobile.touched">
+                                <small class="text-danger" [class.d-none]="usermobile.valid || usermobile.untouched"><b>required field</b></small>
+                                <script>
+                                    const phoneInputField = document.querySelector("#usermobile");
+                                    const phoneInput = window.intlTelInput(phoneInputField, {
+                                      utilsScript:
+                                        "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
+                                    });
+                                    function process(event) {
+                                        event.preventDefault();
+                                
+                                        const phoneNumber = phoneInput.getNumber();
+                                
+                                        info.style.display = "";
+                                        info.innerHTML = `Phone number in E.164 format: <strong>${phoneNumber}</strong>`;
+                                        }
+                                  </script>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Address *" name="useraddress" [(ngModel)]="user.address" required 
+                                #useraddress="ngModel"
+                                [class.is-invalid]="useraddress.invalid && useraddress.touched">
+                                <small class="text-danger" [class.d-none]="useraddress.valid || useraddress.untouched"><b>required field</b></small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="checkbox" style="margin-top: -8%; margin-left: 11%;">
+                        <small style="color: gray;"><input type="checkbox" class="checkbox" name="remember" required> I agree to all Terms & Conditions</small>
+                    </div>
+                    <div style="margin-top: -3%; margin-left: 58.5%; margin-bottom: 3%; color: rgb(0, 0, 0); font-size: 16px;">Already have an Account? 
+                        <small [routerLink]="['/login']" style="color: navy; text-align: center; cursor: pointer;"><b>click here</b></small>
+                    </div>
+                    <button [disabled]="Updateform.form.invalid" type="submit" class="btnRegister">Update</button>
                 </form>
                 </div>
             </div>
