--- a/src/app/components/userdashboard/userdashboard.component.html
+++ b/src/app/components/userdashboard/userdashboard.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="sidebar">
+<div class="sidebar" style="margin-top: 10%;">
     <div class="logo-details">
       <i class='fa fa-bars'></i>
         <div class="logo_name"><img [src]="'assets/img/male.png'" width="55" height="50"> USER </div>
@@ -68,7 +68,7 @@
     </ul>
   </div>
   
-  <div class="home-section">
+  <div class="home-section" style="margin-top: 10%;">
     <div class="container">
       <div class="row">
         <div class="headtxt" style="color: maroon; font-weight: bolder; font-family: aladin; letter-spacing: 1px; font-size: 40px; margin: 0% 0% 1% 20%;"><b>Welcome to User Dashboard 👋</b></div>
