--- a/src/app/components/userprofile/userprofile.component.css
+++ b/src/app/components/userprofile/userprofile.component.css
@@ -134,14 +134,10 @@ label{
   padding-left: 2%;
   box-shadow: 5px 5px 25px 8px rgb(147, 158, 147);
 }
-#bloodCards:hover
-{
-  transform: scale(1.05);
-  cursor: pointer;
-}
+
 .bloodimg
 {
-  float: right;
+  float: left;
   margin-top: 3%;
   margin-right: 3%;
 }
@@ -152,8 +148,7 @@ margin-bottom: 3%;
 }
 .text{
   font-family: verdana;
-  font-size: medium;
-  font-weight: 400; 
+  font-size: 14px;
   margin-top: 1.5%;
 }
 .editbtn
@@ -171,12 +166,23 @@ cursor: pointer;
 }
 
 .btndiv{
-margin-left: 40%;
-align-content: center;
+align-content: left;
 }
 #profilecard
 {
   margin-left: 30%;
   margin-top: 10%;
 	margin-bottom: 10%;
+}
+
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
