--- a/src/app/components/userdashboard/userdashboard.component.html
+++ b/src/app/components/userdashboard/userdashboard.component.html
@@ -1,6 +1,5 @@
-<app-header></app-header>
 
-<div class="sidebar" style="margin-top: 10%;">
+<!-- <div class="sidebar" style="margin-top: 10%;">
     <div class="logo-details">
       <i class='fa fa-bars'></i>
         <div class="logo_name"><img [src]="'assets/img/male.png'" width="55" height="50"> USER </div>
@@ -66,7 +65,7 @@
          <i class='bx bx-log-out' id="log_out" ></i>
      </li>
     </ul>
-  </div>
+  </div> -->
   
   <div class="home-section" style="margin-top: 10%;">
     <div class="container">
