--- a/src/app/components/addcourse/addcourse.component.html
+++ b/src/app/components/addcourse/addcourse.component.html
@@ -24,31 +24,13 @@
                                 [class.is-invalid]="instructorname.invalid && instructorname.touched">
                                <small class="text-danger" [class.d-none]="instructorname.valid || instructorname.untouched"><b>required field</b></small>
                             </div>
-                            <div class="form-group" style="display: none;" id="youtubelink">
-                                <label>Course Video ID : (only ID) <b style="color:red;">*</b></label>
-                                <input type="url" class="form-control" placeholder="please mention youtube video ID" name="youtubeurl" [(ngModel)]="course.youtubeurl" required 
-                                #youtubeurl="ngModel"
-                                [class.is-invalid]="youtubeurl.invalid && youtubeurl.touched">
-                                <small class="text-danger" [class.d-none]="youtubeurl.valid || youtubeurl.untouched"><b>required field</b></small>
-                            </div>
-                            <div class="form-group">
-                                <label>Course Type : <b style="color:red;">*</b></label>
-                                <select class="form-control" id="sel1" name="coursetype" [(ngModel)]="course.coursetype"
-                                #coursetype="ngModel">
-                                    <option value="Website">Website</option>
-                                    <option value="Youtube">Youtube</option>
-                                    <option>Live Interaction</option>
-                                    <option>Google Classroom</option>
-                                    <option>Others</option>
-                                </select>
-                            </div>
                             <div class="form-group">
                                 <label>Course Language : <b style="color:red;">*</b></label>
                                 <select class="form-control" id="sel1" name="language" [(ngModel)]="course.language"
                                 #language="ngModel">
-                                    <option>Tamil</option>
+                                    <option>Romanian</option>
                                     <option>English</option>
-                                    <option>Hindi</option>
+                                    <option>Spanish</option>
                                     <option>Others</option>
                                 </select>
                             </div>
