--- a/src/app/components/addquiz/addquiz.component.html
+++ b/src/app/components/addquiz/addquiz.component.html
@@ -1,1 +1,68 @@
-<p>addquiz works!</p>
+<app-header></app-header>
+
+<div class="container register">
+    <div class="row">
+        <div class="col-md-9 register-right">
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <h3  class="register-heading"><i class="fa fa-sticky-note-o"></i> New Quiz</h3>
+                    <small class="text-danger"><b>{{msg}}</b></small>
+                    <form #quizform="ngForm" (ngSubmit)="addQuiz()">
+                    <div class="row register-form">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Quiz Name : <b style="color:red;">*</b></label>
+                                <input type="text" class="form-control" placeholder="Enter quiz name" name="quizname" [(ngModel)]="quiz.quizname" required 
+                                #quizname="ngModel"
+                                [class.is-invalid]="quizname.invalid && quizname.touched">
+                               <small class="text-danger" [class.d-none]="quizname.valid || quizname.untouched"><b>Required field</b></small>
+                            </div>
+                        </div>                           
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Passing Percent(%) : <b style="color:red;">*</b></label>
+                                <input type="text" class="form-control" placeholder="Enter passing grade" name="passingpercent" [(ngModel)]="quiz.passingpercent" required 
+                                #passingpercent="ngModel"
+                                [class.is-invalid]="passingpercent.invalid && passingpercent.touched">
+                               <small class="text-danger" [class.d-none]="passingpercent.valid || passingpercent.untouched"><b>Required field</b></small>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <a (click)="addQuestion()" style="margin-right: 2%; border: none;" class="btn btn-primary">Add
+                            Question</a>
+                        <div *ngFor="let question of questions; index as i">
+                            <div class="row register-form">
+                                <div class="col-md-6">
+                                    <label>Question <b style="color:red;">*</b></label>  
+                                    <input [(ngModel)] = "questions[i].question" [ngModelOptions]="{standalone: true}" class="form-control" type = "text" placeholder="Enter the question" required>
+                                    <label>Variant A : <b style="color:red;">*</b></label>  <br>
+                                    <input [(ngModel)] = "questions[i].vara" [ngModelOptions]="{standalone: true}" type = "text" placeholder="Enter Variant A" required> <br>
+                                    <label>Variant B : <b style="color:red;">*</b></label>  <br>
+                                    <input [(ngModel)] = "questions[i].varb" [ngModelOptions]="{standalone: true}" type = "text" placeholder="Enter Variant B" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="cars">Choose the correct variant:</label>
+                                    <select [(ngModel)] = "questions[i].correctvar" [ngModelOptions]="{standalone: true}">
+                                        <option value="A">A</option>
+                                        <option value="B">B</option>
+                                        <option value="C">C</option>
+                                        <option value="D">D</option>
+                                      </select><br><br>
+                                    <label>Variant C : <b style="color:red;">*</b></label>  <br>
+                                    <input [(ngModel)] = "questions[i].varc" [ngModelOptions]="{standalone: true}" type = "text" placeholder="Enter Variant C" required> <br>
+                                    <label>Variant D : <b style="color:red;">*</b></label>  <br>
+                                    <input [(ngModel)] = "questions[i].vard" [ngModelOptions]="{standalone: true}" type = "text" placeholder="Enter Variant D" required>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button [disabled]="quizform.form.invalid" type="submit" class="btnRegister"><i class="fa fa-plus"></i> Add Quiz</button>
+                </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>		
+
+<app-footer></app-footer>
